<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_offer_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.midtrans.sdk.uikit.widgets.DefaultTextView
                    android:id="@+id/text_offer_status_applied"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_offer_success"
                    android:drawableLeft="@drawable/ic_offer_success"
                    android:drawablePadding="@dimen/fortytwo_dp"
                    android:drawableStart="@drawable/ic_offer_success"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/eleven_dp"
                    android:paddingLeft="@dimen/sixteen_dp"
                    android:paddingRight="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/eleven_dp"
                    android:text="@string/offer_applied"
                    android:textColor="@color/text_offer_success"
                    android:textSize="@dimen/eleven_sp"/>

                <com.midtrans.sdk.uikit.widgets.DefaultTextView
                    android:id="@+id/text_offer_status_not_applied"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_offer_failure"
                    android:drawableLeft="@drawable/ic_offer_fail"
                    android:drawablePadding="@dimen/fortytwo_dp"
                    android:drawableStart="@drawable/ic_offer_fail"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/eleven_dp"
                    android:paddingLeft="@dimen/sixteen_dp"
                    android:paddingRight="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/eleven_dp"
                    android:text="@string/offer_not_applied"
                    android:textColor="@color/text_offer_failure"
                    android:textSize="@dimen/eleven_sp"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout_offer_status">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_card_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sixteen_dp">

                    <EditText
                        android:id="@+id/et_card_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789 "
                        android:hint="@string/hint_card_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="19"
                        android:nextFocusDown="@+id/et_exp_date"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/expiry_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/til_card_no"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/eight_dp"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/exp_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/et_exp_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:hint="@string/hint_expiry_date"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:maxLength="5"
                            android:nextFocusDown="@+id/et_cvv"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/cvv_til"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true">

                            <EditText
                                android:id="@+id/et_cvv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_cvv"
                                android:imeOptions="actionDone"
                                android:inputType="numberPassword"
                                android:maxLength="6"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <ImageView
                            android:id="@+id/image_question"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:contentDescription="@string/description_question_mark"
                            android:padding="8dp"
                            android:src="@drawable/ic_cvvinfo" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_pay_with_instalments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/expiry_date_layout"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:orientation="horizontal">

                    <com.midtrans.sdk.uikit.widgets.DefaultTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.6"
                        android:ellipsize="end"
                        android:text="@string/pay_with_instalments"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="RelativeOverlap" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.4"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/img_minus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:background="@drawable/ic_minus_button_selector"
                            android:contentDescription="@string/description_minus_button"
                            android:padding="@dimen/sixteen_dp" />

                        <com.midtrans.sdk.uikit.widgets.DefaultTextView
                            android:id="@+id/text_instalment"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/twelve_dp"
                            android:layout_marginRight="@dimen/twelve_dp"
                            android:layout_weight="0.50"
                            android:gravity="center"
                            android:text="@string/zero_month"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/tertiary_text_size"/>

                        <ImageView
                            android:id="@+id/img_plus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:contentDescription="@string/description_plus_button"
                            android:padding="@dimen/sixteen_dp" />

                    </LinearLayout>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cb_store_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_pay_with_instalments"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/save_card_message" />

                <Button
                    android:id="@+id/scan_card"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cb_store_card"
                    android:text="@string/btn_scan_card"
                    android:textColor="?colorPrimary"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_pay_now"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_six_dp"
                android:layout_alignParentBottom="true"
                android:text="@string/pay_now"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>