...
        <android.support.design.widget.TextInputLayout
            android:id="@+id/full_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_full_name"
                android:inputType="textCapWords|textPersonName"
                android:maxLength="100"
                android:singleLine="true"
...
            android:id="@+id/email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name_til">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:singleLine="true"
...
            android:id="@+id/phone_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_til">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:maxLength="15"
                android:singleLine="true"
...
